# AI-Credit-Card-Fraud

./: .env  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
python/: data_explorer.py  data_parser.py  fine_tuning.py  main.py  model_explorer.py  model_handler.py  pyproject.toml  tabnet_model.py  utils.py
python/dataset/: README.MD
python/model/: lgb.pkl  mode.txt  model.onnx  xgb.json  xgb.pkl
python/notebook/: training.ipynb
src/: main.rs  prediction.rs
src/comms/: command.rs  mod.rs  shared_state.rs
src/data/: mod.rs  parsed_transaction.rs  transaction.rs
src/ui/: app.rs  font_handler.rs  mod.rs
