
[package]
name = "AI-CCF"
version = "1.0.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.86.0"

description = "Credit card fraud detection"
readme = "README.md"
repository = "https://github.com/RakuJa/AI-Credit-Card-Fraud"
license = "MIT"
keywords = ["ai", "fraud-detection"]
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
# unwrap_used = {level = "warn", priority = 1}


[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"

maplit = "1.0.2"

fake = { version = "4", features = ["derive"] }

uuid = { version = "1.16", features = ["v4"] }

flume = "0.11.1"

egui_extras = { version = "0.31", features = ["default", "image"] }
eframe = { version = "0.31", features = ["default", "__screenshot"] }
egui = "0.31"
egui_virtual_list = "0.7.0"
rand = "0.9.1"

lightgbm3 = { version = "1.0.7", optional = true }
ort = { version = "2.0.0-rc.9", features = ["ndarray"]}
ndarray = {version = "0.16.1"}

egui_font_loader = "1.0.0"

[features]
lightgbm = ["dep:lightgbm3"]


[build-dependencies]
