[project]
name = "ai-fraud-detection"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12"
dependencies = [
    "polars[pandas, numpy, pyarrow]",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "PyQt6",
    "numpy",
    "imbalanced-learn",
    "lightgbm==4.6.0",
    "pytorch-tabnet",
    "catboost",
    "xgboost",
    "optuna",
    "plotly",
    "kaleido==0.2.0",
    "nbformat",
    "ipython",
    "python-dotenv",
    "onnxmltools",
    "onnxruntime"
]

[tool.uv.sources]
onnxmltools = { git = "https://github.com/onnx/onnxmltools" }


[dependency-groups]
lint = [
    "ruff"
]

[tool.uv]
default-groups = ["lint"]
